tests/errors/runtime.IntegerParsingOverflow.res
>> Runtime | File: runtime.IntegerParsingOverflow.art
     error | Line: 3
           | 
           | number parsing overflow - up to 64-bit integers supported
           | given: 123131237182387123618...